Ajout pages resto + scss

--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="style.scss">
+    <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/d160360027.js" crossorigin="anonymous"></script>
@@ -25,9 +24,112 @@
                 <div class="introTexte">
                     <h1>Réservez le menu qui vous convient</h1>
                     <p>Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
-                    <button><a href="#">Explorez nos restaurants</a></button>
+                    <button><a href="#.restaurants">Explorez nos restaurants</a></button>
                 </div>
             </nav>
     </header>
+
+    <div class="fonctionnement"><h2>Fonctionnement</h2>
+        <div class="fonctioncard">
+            <div class="card">
+                <p class="number">1</p>
+                <i class="fa-solid fa-mobile-screen-button icon"></i>
+                <p>Choissiez un restaurant</p>
+            </div>
+            <div class="card">
+                <p class="number">2</p>
+                <i class="fa-solid fa-list-ul icon"></i>
+                <p>Composez votre menu</p>
+            </div>
+            <div class="card">
+                <p class="number">3</p>
+                <i class="fa-solid fa-store icon"></i>
+                <p>Dégustez au restaurant</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="restaurants"><h2>Restaurants</h2>
+        <div class="menus">
+            <div class="carte">
+                <a href="palette.html">
+                    <img src="./assets/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
+                    <div class="content">
+                        <div class="texte">
+                            <h3>La palette du goût</h3>
+                            <p class="lieu">Ménilmontant</p>
+                        </div>
+                        <p class="new">Nouveau</p>
+                        <div class="animacoeur">
+                            <i class="fa-solid fa-heart plein"></i>
+                            <i class="fa-regular fa-heart vide"></i>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="carte">
+                <a href="note.html">
+                    <img src="./assets/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
+                    <div class="content">
+                        <div class="texte">
+                            <h3>La note enchantée</h3>
+                            <p class="lieu">Charonne</p>
+                        </div>
+                        <p class="new">Nouveau</p>
+                        <div class="animacoeur">
+                            <i class="fa-solid fa-heart plein"></i>
+                            <i class="fa-regular fa-heart vide"></i>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="carte">
+                <a href="francaise.html">
+                    <img src="./assets/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
+                    <div class="content">
+                        <div class="texte">
+                            <h3>À la française</h3>
+                            <p class="lieu">Cité Rouge</p>
+                        </div>
+                        <div class="animacoeur">
+                            <i class="fa-solid fa-heart plein"></i>
+                            <i class="fa-regular fa-heart vide"></i>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="carte">
+                <a href="delice.html">
+                    <img src="./assets/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
+                    <div class="content">
+                        <div class="texte">
+                            <h3>Le délice des sens</h3>
+                            <p class="lieu">Folie-Méricourt</p>
+                        </div>
+                        <div class="animacoeur">
+                            <i class="fa-solid fa-heart plein"></i>
+                            <i class="fa-regular fa-heart vide"></i>
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </div>
+
+    <footer>
+        <h4>ohmyfood</h4>
+        <div class="fensenble">
+            <div class="ftexte">
+                <i class="fa-solid fa-utensils ficon"></i>
+                <p>Proposer un restaurant</p>
+            </div>
+            <div class="ftexte">
+                <i class="fa-solid fa-handshake-angle ficon"></i>
+                <p>Devenir partenaire</p>
+            </div>
+            <p>Mentions légales</p>
+            <a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox?compose=new"><p>Contact</p></a>
+        </div>
+    </footer>
 </body>
 </html>
