--- a/palette.html
+++ b/palette.html
@@ -26,17 +26,104 @@
     </div>
 
     <div class="menu">
-        <h1>La palette du goût</h1>
-        <div class="animacoeur">
-            <i class="fa-solid fa-heart plein"></i>
-            <i class="fa-regular fa-heart vide"></i>
+        <div class="carte">
+            <h1>La palette du goût</h1>
+            <div class="animacoeur">
+                <i class="fa-solid fa-heart plein"></i>
+                <i class="fa-regular fa-heart vide"></i>
+            </div>
         </div>
-        <div class="entrees">
+        <div class="item">
             <h2>Entrées</h2>
-            <div class="start">
-                <h3>Fricassée d'escargot</h3>
-                <p>Au piment d'espelette</p>
-                <p>25€</p>
+            <div class="ensemble">
+                <div class="card">
+                    <div class="texte">
+                        <h3>Fricassée d'escargot</h3>
+                        <p>Au piment d'espelette</p>
+                    </div>
+                    <div class="prix">
+                        <p>25€</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="texte">
+                        <h3>Foie gras de canard mi-cuit</h3>
+                        <p>Et ses copeaux de truffe noire</p>
+                    </div>
+                    <div class="prix">
+                        <p>35€</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="texte">
+                        <h3>Oeuf au plat</h3>
+                        <p>Assaisonné à la truffe sur lit de légumes</p>
+                    </div>
+                    <div class="prix">
+                        <p>20€</p>
+                    </div>
+                </div>
+            </div>
+            <h2>Plats</h2>
+            <div class="ensemble">
+                <div class="card">
+                    <div class="texte">
+                        <h3>Filet de boeuf aux herbes</h3>
+                        <p>Accompagné de sa ribambelle de légumes</p>
+                    </div>
+                    <div class="prix">
+                        <p>40€</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="texte">
+                        <h3>Parmentier de queue de boeuf</h3>
+                        <p>À la truffe noire sur sa purée de panais</p>
+                    </div>
+                    <div class="prix">
+                        <p>35€</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="texte">
+                        <h3>Filet de Turbot</h3>
+                        <p>Aux agrumes</p>
+                    </div>
+                    <div class="prix">
+                        <p>44€</p>
+                    </div>
+                </div>
+            </div>
+            <h2>Desserts</h2>
+            <div class="ensemble">
+                <div class="card">
+                    <div class="texte">
+                        <h3>Paris-Brest</h3>
+                        <p>Revisité</p>
+                    </div>
+                    <div class="prix">
+                        <p>18€</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="texte">
+                        <h3>Macaron au chocolat d'exception</h3>
+                        <p>Et glace à la vanille de Madagascar</p>
+                    </div>
+                    <div class="prix">
+                        <p>22€</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="texte">
+                        <h3>Mousse au chocolat</h3>
+                        <p>Au piment d'espelette et à la truffe noire</p>
+                    </div>
+                    <div class="prix">
+                        <p>23€</p>
+                    </div>
+                </div>
+                <button><a href="#">Commander</a></button>
             </div>
         </div>
     </div>
