Mise à jour pages + animations

--- a/delice.html
+++ b/delice.html
@@ -20,4 +20,156 @@
             </a>
         </nav>
     </header>
+
+    <div class="background">
+        <img src="./assets/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
+    </div>
+
+    <div class="tout">
+    <div class="menu">
+        <div class="carte">
+            <h1>Le délice des sens</h1>
+            <div class="animacoeur">
+                <i class="fa-solid fa-heart plein"></i>
+                <i class="fa-regular fa-heart vide"></i>
+            </div>
+        </div>
+        <div class="item">
+            <h2>Entrées</h2>
+            <div class="ensemble">
+                <div class="card">
+                    <div class="texte">
+                        <h3>Tartare de thon</h3>
+                        <p>Assaisonné au yuzu</p>
+                    </div>
+                    <div class="prix">
+                        <p>25€</p>
+                    </div>
+                    <div class="check">
+                        <i class="fa-solid fa-circle-check valide"></i>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="texte">
+                        <h3>Bouchée de homard croustillant</h3>
+                        <p>Et sa farandole de petits légumes</p>
+                    </div>
+                    <div class="prix">
+                        <p>35€</p>
+                    </div>
+                    <div class="check">
+                        <i class="fa-solid fa-circle-check valide"></i>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="texte">
+                        <h3>Velouté de cèpes</h3>
+                        <p>Aux truffes</p>
+                    </div>
+                    <div class="prix">
+                        <p>20€</p>
+                    </div>
+                    <div class="check">
+                        <i class="fa-solid fa-circle-check valide"></i>
+                    </div>
+                </div>
+            </div>
+            <h2>Plats</h2>
+            <div class="ensemble">
+                <div class="card">
+                    <div class="texte">
+                        <h3>Poulet rôti aux herbes de provence</h3>
+                        <p>Et sa crème de truffe</p>
+                    </div>
+                    <div class="prix">
+                        <p>40€</p>
+                    </div>
+                    <div class="check">
+                        <i class="fa-solid fa-circle-check valide"></i>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="texte">
+                        <h3>Langouste rôtie</h3>
+                        <p>Et ses légumes de saison</p>
+                    </div>
+                    <div class="prix">
+                        <p>35€</p>
+                    </div>
+                    <div class="check">
+                        <i class="fa-solid fa-circle-check valide"></i>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="texte">
+                        <h3>Côte de boeuf angus</h3>
+                        <p>Et sa purée de panais</p>
+                    </div>
+                    <div class="prix">
+                        <p>44€</p>
+                    </div>
+                    <div class="check">
+                        <i class="fa-solid fa-circle-check valide"></i>
+                    </div>
+                </div>
+            </div>
+            <h2>Desserts</h2>
+            <div class="ensemble">
+                <div class="card">
+                    <div class="texte">
+                        <h3>Farandole de desserts</h3>
+                        <p>Du chef</p>
+                    </div>
+                    <div class="prix">
+                        <p>18€</p>
+                    </div>
+                    <div class="check">
+                        <i class="fa-solid fa-circle-check valide"></i>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="texte">
+                        <h3>Crème brûlée</h3>
+                        <p>Revisitée</p>
+                    </div>
+                    <div class="prix">
+                        <p>22€</p>
+                    </div>
+                    <div class="check">
+                        <i class="fa-solid fa-circle-check valide"></i>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="texte">
+                        <h3>Tiramisu</h3>
+                        <p>À la noisette</p>
+                    </div>
+                    <div class="prix">
+                        <p>23€</p>
+                    </div>
+                    <div class="check">
+                        <i class="fa-solid fa-circle-check valide"></i>
+                    </div>
+                </div>
+                <button><a href="#">Commander</a></button>
+            </div>
+        </div>
+    </div>
+    </div>
+
+    <footer>
+        <h4>ohmyfood</h4>
+        <div class="fensenble">
+            <div class="ftexte">
+                <i class="fa-solid fa-utensils ficon"></i>
+                <p>Proposer un restaurant</p>
+            </div>
+            <div class="ftexte">
+                <i class="fa-solid fa-handshake-angle ficon"></i>
+                <p>Devenir partenaire</p>
+            </div>
+            <p>Mentions légales</p>
+            <a href="mailto: laetitia.cli@live.fr"  target="_blank"><p>Contact</p></a>
+        </div>
+    </footer>
 </body>
