--- a/palette.html
+++ b/palette.html
@@ -25,6 +25,7 @@
         <img src="./assets/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
     </div>
 
+    <div class="tout">
     <div class="menu">
         <div class="carte">
             <h1>La palette du goût</h1>
@@ -44,6 +45,9 @@
                     <div class="prix">
                         <p>25€</p>
                     </div>
+                    <div class="check">
+                        <i class="fa-solid fa-circle-check valide"></i>
+                    </div>
                 </div>
                 <div class="card">
                     <div class="texte">
@@ -53,6 +57,9 @@
                     <div class="prix">
                         <p>35€</p>
                     </div>
+                    <div class="check">
+                        <i class="fa-solid fa-circle-check valide"></i>
+                    </div>
                 </div>
                 <div class="card">
                     <div class="texte">
@@ -61,6 +68,9 @@
                     </div>
                     <div class="prix">
                         <p>20€</p>
+                    </div>
+                    <div class="check">
+                        <i class="fa-solid fa-circle-check valide"></i>
                     </div>
                 </div>
             </div>
@@ -74,6 +84,9 @@
                     <div class="prix">
                         <p>40€</p>
                     </div>
+                    <div class="check">
+                        <i class="fa-solid fa-circle-check valide"></i>
+                    </div>
                 </div>
                 <div class="card">
                     <div class="texte">
@@ -83,6 +96,9 @@
                     <div class="prix">
                         <p>35€</p>
                     </div>
+                    <div class="check">
+                        <i class="fa-solid fa-circle-check valide"></i>
+                    </div>
                 </div>
                 <div class="card">
                     <div class="texte">
@@ -91,6 +107,9 @@
                     </div>
                     <div class="prix">
                         <p>44€</p>
+                    </div>
+                    <div class="check">
+                        <i class="fa-solid fa-circle-check valide"></i>
                     </div>
                 </div>
             </div>
@@ -104,6 +123,9 @@
                     <div class="prix">
                         <p>18€</p>
                     </div>
+                    <div class="check">
+                        <i class="fa-solid fa-circle-check valide"></i>
+                    </div>
                 </div>
                 <div class="card">
                     <div class="texte">
@@ -112,6 +134,9 @@
                     </div>
                     <div class="prix">
                         <p>22€</p>
+                    </div>
+                    <div class="check">
+                        <i class="fa-solid fa-circle-check valide"></i>
                     </div>
                 </div>
                 <div class="card">
@@ -122,9 +147,29 @@
                     <div class="prix">
                         <p>23€</p>
                     </div>
+                    <div class="check">
+                        <i class="fa-solid fa-circle-check valide"></i>
+                    </div>
                 </div>
                 <button><a href="#">Commander</a></button>
             </div>
         </div>
     </div>
+    </div>
+
+    <footer>
+        <h4>ohmyfood</h4>
+        <div class="fensenble">
+            <div class="ftexte">
+                <i class="fa-solid fa-utensils ficon"></i>
+                <p>Proposer un restaurant</p>
+            </div>
+            <div class="ftexte">
+                <i class="fa-solid fa-handshake-angle ficon"></i>
+                <p>Devenir partenaire</p>
+            </div>
+            <p>Mentions légales</p>
+            <a href="mailto: laetitia.cli@live.fr"  target="_blank"><p>Contact</p></a>
+        </div>
+    </footer>
 </body>
