--- a/francaise.html
+++ b/francaise.html
@@ -20,4 +20,156 @@
             </a>
         </nav>
     </header>
+
+    <div class="background">
+        <img src="./assets/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
+    </div>
+
+    <div class="tout">
+    <div class="menu">
+        <div class="carte">
+            <h1>À la française</h1>
+            <div class="animacoeur">
+                <i class="fa-solid fa-heart plein"></i>
+                <i class="fa-regular fa-heart vide"></i>
+            </div>
+        </div>
+        <div class="item">
+            <h2>Entrées</h2>
+            <div class="ensemble">
+                <div class="card">
+                    <div class="texte">
+                        <h3>Tartare de poulpe acidulé</h3>
+                        <p>Aux zests d'orange</p>
+                    </div>
+                    <div class="prix">
+                        <p>25€</p>
+                    </div>
+                    <div class="check">
+                        <i class="fa-solid fa-circle-check valide"></i>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="texte">
+                        <h3>Velouté de légumes d'antan</h3>
+                        <p>Carotte, panais, topinambour</p>
+                    </div>
+                    <div class="prix">
+                        <p>35€</p>
+                    </div>
+                    <div class="check">
+                        <i class="fa-solid fa-circle-check valide"></i>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="texte">
+                        <h3>Soupe à l'oignon</h3>
+                        <p>Revisitée</p>
+                    </div>
+                    <div class="prix">
+                        <p>20€</p>
+                    </div>
+                    <div class="check">
+                        <i class="fa-solid fa-circle-check valide"></i>
+                    </div>
+                </div>
+            </div>
+            <h2>Plats</h2>
+            <div class="ensemble">
+                <div class="card">
+                    <div class="texte">
+                        <h3>Coquilles Saint-Jacques</h3>
+                        <p>Accompagnées d'une purée de panais</p>
+                    </div>
+                    <div class="prix">
+                        <p>40€</p>
+                    </div>
+                    <div class="check">
+                        <i class="fa-solid fa-circle-check valide"></i>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="texte">
+                        <h3>Magret de canard</h3>
+                        <p>Et parmentier de pommes de terres</p>
+                    </div>
+                    <div class="prix">
+                        <p>35€</p>
+                    </div>
+                    <div class="check">
+                        <i class="fa-solid fa-circle-check valide"></i>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="texte">
+                        <h3>Pigeonneau d'Ille-et-Vilaine</h3>
+                        <p>Sur son lit de gnocchis aux légumes</p>
+                    </div>
+                    <div class="prix">
+                        <p>44€</p>
+                    </div>
+                    <div class="check">
+                        <i class="fa-solid fa-circle-check valide"></i>
+                    </div>
+                </div>
+            </div>
+            <h2>Desserts</h2>
+            <div class="ensemble">
+                <div class="card">
+                    <div class="texte">
+                        <h3>Pétales de violettes glacés</h3>
+                        <p>Et purée de noisettes</p>
+                    </div>
+                    <div class="prix">
+                        <p>18€</p>
+                    </div>
+                    <div class="check">
+                        <i class="fa-solid fa-circle-check valide"></i>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="texte">
+                        <h3>Fondant au chocolat</h3>
+                        <p>Revisité</p>
+                    </div>
+                    <div class="prix">
+                        <p>22€</p>
+                    </div>
+                    <div class="check">
+                        <i class="fa-solid fa-circle-check valide"></i>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="texte">
+                        <h3>Millefeuille croustillant</h3>
+                        <p>Myrtilles et pâte d'amande</p>
+                    </div>
+                    <div class="prix">
+                        <p>23€</p>
+                    </div>
+                    <div class="check">
+                        <i class="fa-solid fa-circle-check valide"></i>
+                    </div>
+                </div>
+                <button><a href="#">Commander</a></button>
+            </div>
+        </div>
+    </div>
+    </div>
+
+    <footer>
+        <h4>ohmyfood</h4>
+        <div class="fensenble">
+            <div class="ftexte">
+                <i class="fa-solid fa-utensils ficon"></i>
+                <p>Proposer un restaurant</p>
+            </div>
+            <div class="ftexte">
+                <i class="fa-solid fa-handshake-angle ficon"></i>
+                <p>Devenir partenaire</p>
+            </div>
+            <p>Mentions légales</p>
+            <a href="mailto: laetitia.cli@live.fr"  target="_blank"><p>Contact</p></a>
+        </div>
+    </footer>
 </body>
