--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 <p>Devenir partenaire</p>
             </div>
             <p>Mentions légales</p>
-            <a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox?compose=new"><p>Contact</p></a>
+            <a href="mailto: laetitia.cli@live.fr"  target="_blank"><p>Contact</p></a>
         </div>
     </footer>
 </body>
