--- a/note.html
+++ b/note.html
@@ -20,4 +20,168 @@
             </a>
         </nav>
     </header>
+
+    <div class="background">
+        <img src="./assets/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
+    </div>
+
+    <div class="tout">
+    <div class="menu">
+        <div class="carte">
+            <h1>La note enchantée</h1>
+            <div class="animacoeur">
+                <i class="fa-solid fa-heart plein"></i>
+                <i class="fa-regular fa-heart vide"></i>
+            </div>
+        </div>
+        <div class="item">
+            <h2>Entrées</h2>
+            <div class="ensemble">
+                <div class="card">
+                    <div class="texte">
+                        <h3>Ravioles de foie gras</h3>
+                        <p>Accompagnés de leur crème à la truffe</p>
+                    </div>
+                    <div class="prix">
+                        <p>25€</p>
+                    </div>
+                    <div class="check">
+                        <i class="fa-solid fa-circle-check valide"></i>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="texte">
+                        <h3>Caviar osciètre</h3>
+                        <p>Sur blini à la farine de blé noir</p>
+                    </div>
+                    <div class="prix">
+                        <p>35€</p>
+                    </div>
+                    <div class="check">
+                        <i class="fa-solid fa-circle-check valide"></i>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="texte">
+                        <h3>Homard et espuma de pomme de terre</h3>
+                        <p>Mariné aux zets d'orange</p>
+                    </div>
+                    <div class="prix">
+                        <p>20€</p>
+                    </div>
+                    <div class="check">
+                        <i class="fa-solid fa-circle-check valide"></i>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="texte">
+                        <h3>Foie gras de canard cuit entier</h3>
+                        <p>Confiture de figue et pain toasté</p>
+                    </div>
+                    <div class="prix">
+                        <p>35€</p>
+                    </div>
+                    <div class="check">
+                        <i class="fa-solid fa-circle-check valide"></i>
+                    </div>
+                </div>
+            </div>
+            <h2>Plats</h2>
+            <div class="ensemble">
+                <div class="card">
+                    <div class="texte">
+                        <h3>Noix de coquilles Saint-Jacques</h3>
+                        <p>Sur lit de purée de céleri-rave</p>
+                    </div>
+                    <div class="prix">
+                        <p>40€</p>
+                    </div>
+                    <div class="check">
+                        <i class="fa-solid fa-circle-check valide"></i>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="texte">
+                        <h3>Langoustine poêlée</h3>
+                        <p>Purée de patate douce</p>
+                    </div>
+                    <div class="prix">
+                        <p>35€</p>
+                    </div>
+                    <div class="check">
+                        <i class="fa-solid fa-circle-check valide"></i>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="texte">
+                        <h3>Mijoté de queue de boeuf</h3>
+                        <p>Et riz sauvage aux zests de citron</p>
+                    </div>
+                    <div class="prix">
+                        <p>44€</p>
+                    </div>
+                    <div class="check">
+                        <i class="fa-solid fa-circle-check valide"></i>
+                    </div>
+                </div>
+            </div>
+            <h2>Desserts</h2>
+            <div class="ensemble">
+                <div class="card">
+                    <div class="texte">
+                        <h3>Macaron noisette et chocolat</h3>
+                        <p>Glace au caramel brun et sel de Guérande</p>
+                    </div>
+                    <div class="prix">
+                        <p>18€</p>
+                    </div>
+                    <div class="check">
+                        <i class="fa-solid fa-circle-check valide"></i>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="texte">
+                        <h3>Baba au rhum revisité</h3>
+                        <p>Avec son coulis de citron</p>
+                    </div>
+                    <div class="prix">
+                        <p>22€</p>
+                    </div>
+                    <div class="check">
+                        <i class="fa-solid fa-circle-check valide"></i>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="texte">
+                        <h3>Tarte au citron meringuée</h3>
+                        <p>Destructurée</p>
+                    </div>
+                    <div class="prix">
+                        <p>23€</p>
+                    </div>
+                    <div class="check">
+                        <i class="fa-solid fa-circle-check valide"></i>
+                    </div>
+                </div>
+                <button><a href="#">Commander</a></button>
+            </div>
+        </div>
+    </div>
+    </div>
+
+    <footer>
+        <h4>ohmyfood</h4>
+        <div class="fensenble">
+            <div class="ftexte">
+                <i class="fa-solid fa-utensils ficon"></i>
+                <p>Proposer un restaurant</p>
+            </div>
+            <div class="ftexte">
+                <i class="fa-solid fa-handshake-angle ficon"></i>
+                <p>Devenir partenaire</p>
+            </div>
+            <p>Mentions légales</p>
+            <a href="mailto: laetitia.cli@live.fr"  target="_blank"><p>Contact</p></a>
+        </div>
+    </footer>
 </body>
