--- a/delice.html
+++ b/delice.html
@@ -36,8 +36,8 @@
         </div>
         <div class="item">
             <h2>Entrées</h2>
-            <div class="ensemble">
-                <div class="card">
+            <div class="ensemble un">
+                <div class="card one">
                     <div class="texte">
                         <h3>Tartare de thon</h3>
                         <p>Assaisonné au yuzu</p>
@@ -49,7 +49,7 @@
                         <i class="fa-solid fa-circle-check valide"></i>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card two">
                     <div class="texte">
                         <h3>Bouchée de homard croustillant</h3>
                         <p>Et sa farandole de petits légumes</p>
@@ -61,7 +61,7 @@
                         <i class="fa-solid fa-circle-check valide"></i>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card three">
                     <div class="texte">
                         <h3>Velouté de cèpes</h3>
                         <p>Aux truffes</p>
@@ -75,8 +75,8 @@
                 </div>
             </div>
             <h2>Plats</h2>
-            <div class="ensemble">
-                <div class="card">
+            <div class="ensemble deux">
+                <div class="card one">
                     <div class="texte">
                         <h3>Poulet rôti aux herbes de provence</h3>
                         <p>Et sa crème de truffe</p>
@@ -88,7 +88,7 @@
                         <i class="fa-solid fa-circle-check valide"></i>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card two">
                     <div class="texte">
                         <h3>Langouste rôtie</h3>
                         <p>Et ses légumes de saison</p>
@@ -100,7 +100,7 @@
                         <i class="fa-solid fa-circle-check valide"></i>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card three">
                     <div class="texte">
                         <h3>Côte de boeuf angus</h3>
                         <p>Et sa purée de panais</p>
@@ -114,8 +114,8 @@
                 </div>
             </div>
             <h2>Desserts</h2>
-            <div class="ensemble">
-                <div class="card">
+            <div class="ensemble trois">
+                <div class="card one">
                     <div class="texte">
                         <h3>Farandole de desserts</h3>
                         <p>Du chef</p>
@@ -127,7 +127,7 @@
                         <i class="fa-solid fa-circle-check valide"></i>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card two">
                     <div class="texte">
                         <h3>Crème brûlée</h3>
                         <p>Revisitée</p>
@@ -139,7 +139,7 @@
                         <i class="fa-solid fa-circle-check valide"></i>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card three">
                     <div class="texte">
                         <h3>Tiramisu</h3>
                         <p>À la noisette</p>
