--- a/francaise.html
+++ b/francaise.html
@@ -36,8 +36,8 @@
         </div>
         <div class="item">
             <h2>Entrées</h2>
-            <div class="ensemble">
-                <div class="card">
+            <div class="ensemble un">
+                <div class="card one">
                     <div class="texte">
                         <h3>Tartare de poulpe acidulé</h3>
                         <p>Aux zests d'orange</p>
@@ -49,7 +49,7 @@
                         <i class="fa-solid fa-circle-check valide"></i>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card two">
                     <div class="texte">
                         <h3>Velouté de légumes d'antan</h3>
                         <p>Carotte, panais, topinambour</p>
@@ -61,7 +61,7 @@
                         <i class="fa-solid fa-circle-check valide"></i>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card three">
                     <div class="texte">
                         <h3>Soupe à l'oignon</h3>
                         <p>Revisitée</p>
@@ -75,8 +75,8 @@
                 </div>
             </div>
             <h2>Plats</h2>
-            <div class="ensemble">
-                <div class="card">
+            <div class="ensemble deux">
+                <div class="card one">
                     <div class="texte">
                         <h3>Coquilles Saint-Jacques</h3>
                         <p>Accompagnées d'une purée de panais</p>
@@ -88,7 +88,7 @@
                         <i class="fa-solid fa-circle-check valide"></i>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card two">
                     <div class="texte">
                         <h3>Magret de canard</h3>
                         <p>Et parmentier de pommes de terres</p>
@@ -100,7 +100,7 @@
                         <i class="fa-solid fa-circle-check valide"></i>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card three">
                     <div class="texte">
                         <h3>Pigeonneau d'Ille-et-Vilaine</h3>
                         <p>Sur son lit de gnocchis aux légumes</p>
@@ -114,8 +114,8 @@
                 </div>
             </div>
             <h2>Desserts</h2>
-            <div class="ensemble">
-                <div class="card">
+            <div class="ensemble trois">
+                <div class="card one">
                     <div class="texte">
                         <h3>Pétales de violettes glacés</h3>
                         <p>Et purée de noisettes</p>
@@ -127,7 +127,7 @@
                         <i class="fa-solid fa-circle-check valide"></i>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card two">
                     <div class="texte">
                         <h3>Fondant au chocolat</h3>
                         <p>Revisité</p>
@@ -139,7 +139,7 @@
                         <i class="fa-solid fa-circle-check valide"></i>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card three">
                     <div class="texte">
                         <h3>Millefeuille croustillant</h3>
                         <p>Myrtilles et pâte d'amande</p>
