--- a/note.html
+++ b/note.html
@@ -36,8 +36,8 @@
         </div>
         <div class="item">
             <h2>Entrées</h2>
-            <div class="ensemble">
-                <div class="card">
+            <div class="ensemble un">
+                <div class="card one">
                     <div class="texte">
                         <h3>Ravioles de foie gras</h3>
                         <p>Accompagnés de leur crème à la truffe</p>
@@ -49,7 +49,7 @@
                         <i class="fa-solid fa-circle-check valide"></i>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card two">
                     <div class="texte">
                         <h3>Caviar osciètre</h3>
                         <p>Sur blini à la farine de blé noir</p>
@@ -61,7 +61,7 @@
                         <i class="fa-solid fa-circle-check valide"></i>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card three">
                     <div class="texte">
                         <h3>Homard et espuma de pomme de terre</h3>
                         <p>Mariné aux zets d'orange</p>
@@ -73,7 +73,7 @@
                         <i class="fa-solid fa-circle-check valide"></i>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card four">
                     <div class="texte">
                         <h3>Foie gras de canard cuit entier</h3>
                         <p>Confiture de figue et pain toasté</p>
@@ -87,8 +87,8 @@
                 </div>
             </div>
             <h2>Plats</h2>
-            <div class="ensemble">
-                <div class="card">
+            <div class="ensemble two">
+                <div class="card one">
                     <div class="texte">
                         <h3>Noix de coquilles Saint-Jacques</h3>
                         <p>Sur lit de purée de céleri-rave</p>
@@ -100,7 +100,7 @@
                         <i class="fa-solid fa-circle-check valide"></i>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card two">
                     <div class="texte">
                         <h3>Langoustine poêlée</h3>
                         <p>Purée de patate douce</p>
@@ -112,7 +112,7 @@
                         <i class="fa-solid fa-circle-check valide"></i>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card three">
                     <div class="texte">
                         <h3>Mijoté de queue de boeuf</h3>
                         <p>Et riz sauvage aux zests de citron</p>
@@ -126,8 +126,8 @@
                 </div>
             </div>
             <h2>Desserts</h2>
-            <div class="ensemble">
-                <div class="card">
+            <div class="ensemble trois">
+                <div class="card one">
                     <div class="texte">
                         <h3>Macaron noisette et chocolat</h3>
                         <p>Glace au caramel brun et sel de Guérande</p>
@@ -139,7 +139,7 @@
                         <i class="fa-solid fa-circle-check valide"></i>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card two">
                     <div class="texte">
                         <h3>Baba au rhum revisité</h3>
                         <p>Avec son coulis de citron</p>
@@ -151,7 +151,7 @@
                         <i class="fa-solid fa-circle-check valide"></i>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card three">
                     <div class="texte">
                         <h3>Tarte au citron meringuée</h3>
                         <p>Destructurée</p>
