--- a/palette.html
+++ b/palette.html
@@ -36,8 +36,8 @@
         </div>
         <div class="item">
             <h2>Entrées</h2>
-            <div class="ensemble">
-                <div class="card">
+            <div class="ensemble un">
+                <div class="card one">
                     <div class="texte">
                         <h3>Fricassée d'escargot</h3>
                         <p>Au piment d'espelette</p>
@@ -49,7 +49,7 @@
                         <i class="fa-solid fa-circle-check valide"></i>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card two">
                     <div class="texte">
                         <h3>Foie gras de canard mi-cuit</h3>
                         <p>Et ses copeaux de truffe noire</p>
@@ -61,7 +61,7 @@
                         <i class="fa-solid fa-circle-check valide"></i>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card three">
                     <div class="texte">
                         <h3>Oeuf au plat</h3>
                         <p>Assaisonné à la truffe sur lit de légumes</p>
@@ -75,8 +75,8 @@
                 </div>
             </div>
             <h2>Plats</h2>
-            <div class="ensemble">
-                <div class="card">
+            <div class="ensemble deux">
+                <div class="card one">
                     <div class="texte">
                         <h3>Filet de boeuf aux herbes</h3>
                         <p>Accompagné de sa ribambelle de légumes</p>
@@ -88,7 +88,7 @@
                         <i class="fa-solid fa-circle-check valide"></i>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card two">
                     <div class="texte">
                         <h3>Parmentier de queue de boeuf</h3>
                         <p>À la truffe noire sur sa purée de panais</p>
@@ -100,7 +100,7 @@
                         <i class="fa-solid fa-circle-check valide"></i>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card three">
                     <div class="texte">
                         <h3>Filet de Turbot</h3>
                         <p>Aux agrumes</p>
@@ -114,8 +114,8 @@
                 </div>
             </div>
             <h2>Desserts</h2>
-            <div class="ensemble">
-                <div class="card">
+            <div class="ensemble trois">
+                <div class="card one">
                     <div class="texte">
                         <h3>Paris-Brest</h3>
                         <p>Revisité</p>
@@ -127,7 +127,7 @@
                         <i class="fa-solid fa-circle-check valide"></i>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card two">
                     <div class="texte">
                         <h3>Macaron au chocolat d'exception</h3>
                         <p>Et glace à la vanille de Madagascar</p>
@@ -139,7 +139,7 @@
                         <i class="fa-solid fa-circle-check valide"></i>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card three">
                     <div class="texte">
                         <h3>Mousse au chocolat</h3>
                         <p>Au piment d'espelette et à la truffe noire</p>
