--- a/index.html
+++ b/index.html
@@ -29,6 +29,16 @@
             </nav>
     </header>
 
+    <section>
+        <div class="loader">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+    </section>
+
     <div class="fonctionnement"><h2>Fonctionnement</h2>
         <div class="fonctioncard">
             <div class="card">
