--- a/note.html
+++ b/note.html
@@ -163,7 +163,9 @@
                         <i class="fa-solid fa-circle-check valide"></i>
                     </div>
                 </div>
-                <button><a href="#">Commander</a></button>
+                <div class="button">
+                    <a href="#"><p>Commander</p></a>
+                </div>
             </div>
         </div>
     </div>
@@ -181,7 +183,7 @@
                 <p>Devenir partenaire</p>
             </div>
             <p>Mentions légales</p>
-            <a href="mailto: laetitia.cli@live.fr"  target="_blank"><p>Contact</p></a>
+            <a href="mailto:laetitia.cli@live.fr"  target="_blank"><p>Contact</p></a>
         </div>
     </footer>
 </body>
